--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "@discordjs/core": "^0.6.0",
-    "discord.js": "^14.13.0",
+    "@discordjs/opus": "^0.9.0",
+    "discord-music-player": "^9.1.1",
+    "discord.js": "^14.12.1",
+    "isomorphic-unfetch": "^4.0.2",
     "json": "^11.0.0"
   },
   "devDependencies": {
