--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@discordjs/core": "^0.6.0",
     "@discordjs/opus": "^0.9.0",
+    "@discordjs/voice": "^0.16.0",
     "discord-music-player": "^9.1.1",
     "discord.js": "^14.12.1",
     "isomorphic-unfetch": "^4.0.2",
