--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "isomorphic-unfetch": "^4.0.2",
     "json": "^11.0.0",
     "mediaplex": "^0.0.9",
-    "youtube-ext": "^1.1.16"
+    "play-dl": "^1.9.7"
   },
   "devDependencies": {
     "eslint": "^8.9.0"
