--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord-player": "^6.6.2",
     "discord-player-youtubei": "^1.3.5",
     "discord.js": "^14.12.1",
+    "dotenv": "^16.4.5",
     "ffmpeg-static": "^5.2.0",
     "isomorphic-unfetch": "^4.0.2",
     "json": "^11.0.0",
