--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@discordjs/core": "^0.6.0",
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.1",
+    "axios": "^1.7.7",
     "discord-player": "^6.7.1",
     "discord-player-youtubei": "^1.3.5",
     "discord.js": "^14.16.3",
