--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@discordjs/core": "^0.6.0",
     "@discordjs/opus": "^0.9.0",
     "@discordjs/voice": "^0.16.1",
-    "axios": "^1.7.7",
+    "axios": "^1.7.9",
     "discord-player": "^6.7.1",
-    "discord-player-youtubei": "^1.3.5",
+    "discord-player-youtubei": "^1.3.6",
     "discord.js": "^14.16.3",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.4.7",
     "isomorphic-unfetch": "^4.0.2",
     "json": "^11.0.0",
     "mediaplex": "^0.0.9",
@@ -26,5 +26,13 @@
   "devDependencies": {
     "eslint": "^8.57.1"
   },
-  "keywords": []
+  "keywords": [],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sesor33/SparkBotJS-14.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Sesor33/SparkBotJS-14/issues"
+  },
+  "homepage": "https://github.com/Sesor33/SparkBotJS-14#readme"
 }
