--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@discord-player/extractor": "^4.5.1",
     "@discordjs/core": "^0.6.0",
-    "@discordjs/opus": "^0.9.0",
+    "@discordjs/opus": "^0.10.0",
     "@discordjs/voice": "^0.16.1",
+    "@sequelize/core": "^7.0.0-alpha.45",
+    "@sequelize/mysql": "^7.0.0-alpha.45",
+    "argon2": "^0.41.1",
     "axios": "^1.7.9",
     "discord-player": "^6.7.1",
     "discord-player-youtubei": "^1.3.7",
