--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "isomorphic-unfetch": "^4.0.2",
     "json": "^11.0.0",
     "mediaplex": "^0.0.9",
-    "play-dl": "^1.9.7"
+    "play-dl": "^1.9.7",
+    "rate-limiter-flexible": "^6.2.1"
   },
   "devDependencies": {
     "eslint": "^8.57.1"
