Updating compose to handle volumes for sql data

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -28,6 +28,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: ${DB_PASSWORD}
       MYSQL_DATABASE: ${DB_NAME}
+    volumes:
+        - ./data/mysql:/var/lib/mysql
 
   sparkbot:
     image: forsburn/sparkbot:latest
@@ -49,4 +51,5 @@ services:
     restart: unless-stopped
     ports:
       - '3001:3000'
+
     
