--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,5 +51,11 @@ services:
     restart: unless-stopped
     ports:
       - '3001:3000'
+    environment:
+        DB_USERNAME: ${DB_USERNAME}
+        DB_PASSWORD: ${DB_PASSWORD}
+    volumes:
+        - ./data/grafana/storage:/var/lib/grafana
+        - ./data/grafana/provisioning/:/etc/grafana/provisioning
 
     
