--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     environment:
       MONGODB_URI: mongodb://db/5e-database
       REDIS_URL: redis://cache:6379
-    build: ../DnDLocalAPI/5e-srd-api
+    build: .
     ports:
       - '3000:3000'
     depends_on:
