--- a/package.json
+++ b/package.json
@@ -2,12 +2,22 @@
   "name": "sparkbotjs",
   "version": "1.1.0",
   "description": "A JS based discord bot",
+  "keywords": [],
+  "homepage": "https://github.com/Sesor33/SparkBotJS-14#readme",
+  "bugs": {
+    "url": "https://github.com/Sesor33/SparkBotJS-14/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sesor33/SparkBotJS-14.git"
+  },
+  "license": "ISC",
+  "author": "Tech",
+  "type": "commonjs",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Tech",
-  "license": "ISC",
   "dependencies": {
     "@discord-player/extractor": "^4.5.1",
     "@discordjs/core": "^0.6.0",
@@ -29,15 +39,5 @@
   },
   "devDependencies": {
     "eslint": "^8.57.1"
-  },
-  "keywords": [],
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Sesor33/SparkBotJS-14.git"
-  },
-  "bugs": {
-    "url": "https://github.com/Sesor33/SparkBotJS-14/issues"
-  },
-  "homepage": "https://github.com/Sesor33/SparkBotJS-14#readme",
-  "type": "commonjs"
+  }
 }
